@@ -1,7 +1,9 @@
 AUX gtkhtml-editor.xml 1035 RMD160 2809f2569ed25df3607102fdee641777adc443dc SHA1 6bbdf72e2a38506cc5f3626240b9cd2880de3e33 SHA256 5ae563343abc4a667fc3057ca73e61667f12ca203e4fc270c3906e1a1adeb505
 DIST gtkhtml-3.24.5.tar.bz2 1473717 RMD160 fc81498abe3cf9f9ca58cb29403921d4e70cbf18 SHA1 4927df0adf6b9760d98b7777c60a01a63d870425 SHA256 b6ae7311b9412030649cbfc9b3ed240842343e95bf52c4c99069b14192128079
 DIST gtkhtml-3.26.1.1.tar.bz2 1499057 RMD160 ee022311dd9137b87365b50b4f2b4789401f7cd8 SHA1 b8538e94f6ffb43059131684bd1929a751d7b13e SHA256 8a53eaf4e040fc93695543b82ca676b02c33b5bfc50ef498ebcaf8305d548e61
+DIST gtkhtml-3.26.2.tar.bz2 1486870 RMD160 b062860e9bcff2ae7ebae7f353a3cd00dbaa3079 SHA1 292e67b2263bf1c449480ba4b14843f1a101ec24 SHA256 8a0ac863af4c3455455edf0e3c063fa79385806bdfb79ab2a209ea7336161b07
 EBUILD gtkhtml-3.24.5.ebuild 1824 RMD160 c5e04786c06470fe95c1e1473ed9f1bd288ff18a SHA1 6843972f01a6823fa54d0d0c22034268888837f1 SHA256 c92dfb167ded3b120ad4aaa3284e0206f100ea8fd38b6aeb5b4d35b2d26db460
 EBUILD gtkhtml-3.26.1.1.ebuild 1874 RMD160 c26c2190765e65d2e03b47ad3d49559c77c6914d SHA1 074d82301c2023e78c6c81accd78b3f7ffb4ff0b SHA256 7e3b9906b5f2754e3990c8475054fa8420dead62f6bcdcdbe4151acc29844971
-MISC ChangeLog 26150 RMD160 bc6f365ad44e418834e8ed22f07d711bff55b400 SHA1 fbe32d4abbdeb3b5d14b2771757869669974dbcf SHA256 dafbd0c264d392acd026827b69c1eb666c83755a3e25b780e8a8d8546fe3f9fd
+EBUILD gtkhtml-3.26.2.ebuild 1808 RMD160 f9fc2b92cc6a9319053d3ea6e42f5d31bd8a12d6 SHA1 c6090f0af0cb1c986acfa0ca8e8ab0ff41d7d7fb SHA256 5918c809d0c5e3d05084fa9048bb476f9b40eeb243ce8b00e45fecab8112c3b1
+MISC ChangeLog 26315 RMD160 611a554c40e8104472615bcd093c8f22f7550e80 SHA1 a23c48314e8acc3c0546f34dbacb58338d4b8b8f SHA256 d1166dc9b586ec121487903e6f65e145d0b4c1f43ef034390a9ed61e8f88bad5
 MISC metadata.xml 250 RMD160 4e46249cd3426e09b6f462c29ea489724464f51c SHA1 96ab3cf6c39bb44e33d788425a99ddd337a31eeb SHA256 86cd2180b3599ddb2bef78131a9c86a37fa1ee7247aa3245e11e7ff6a239e2e0
