@@ -1,6 +1,12 @@
 # ChangeLog for gnome-extra/gtkhtml
-# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gtkhtml/ChangeLog,v 1.186 2009/05/03 22:17:27 eva Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gtkhtml/ChangeLog,v 1.187 2009/05/18 21:23:25 eva Exp $
+
+*gtkhtml-3.26.2 (18 May 2009)
+
+  18 May 2009; Gilles Dartiguelongue <eva@gentoo.org>
+  +gtkhtml-3.26.2.ebuild:
+  Bump to 3.26.2. Bug fixes and translation updates.
 
   03 May 2009; Gilles Dartiguelongue <eva@gentoo.org>
   -files/gtkhtml-3.0.10-no-extern-cluealigned.diff,
